# OpenSedimentation-Hydroflow

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  main.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
hydroflow/: __init__.py
hydroflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hydroflow/agents/: __init__.py  openai_agent.py
hydroflow/analysis/: bathymetric.py  sediment_transport.py  vegetation.py
hydroflow/api/: __init__.py  app.py
hydroflow/cli/: main.py
hydroflow/core/: config.py  exceptions.py
hydroflow/ml/: models.py
hydroflow/monitoring/: __init__.py  realtime.py
hydroflow/remediation/: __init__.py  dredging.py
hydroflow/utils/: __init__.py  gis.py  reporting.py
tests/: test_agents.py  test_api.py  test_cli.py  test_monitoring_ws.py  test_reporting.py
tests/unit/: test_bathymetric.py  test_ml_models.py  test_sediment_transport.py
